🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Merrill Kelly racks up Ks today</h3>
-    <p>Merrill Kelly faces Rockies, who strike out 26.5% of the time.</p>
+    <h3>Robbie Ray racks up Ks today</h3>
+    <p>Robbie Ray faces Red Sox, who strike out 23.8% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Spencer Steer HR prop</h3>
-    <p>37.5% hard-hit rate vs Sonny Gray — eyes on the fences.</p>
+    <h3>Parker Meadows HR prop</h3>
+    <p>Parker Meadows has hit 2 already and owns a 50.0% hard-hit rate vs Zack Littell.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Brooks Lee Hit Prop</h3>
-    <p>Riding a 19-game hit streak.</p>
+    <h3>Yandy Diaz knocks one?</h3>
+    <p>🔥 12 straight games with a hit.</p>
 </div>
 
 <div class="prop-card">
-    <h3>atlantabraves vs miamimarlins NRFI Pick</h3>
-    <p>Eury Perez and Grant Holmes tend to shut it down early — NRFI value here.</p>
+    <h3>NRFI: newyorkmets vs philadelphiaphillies</h3>
+    <p>Low 1st-inning scoring profile with Jesus Luzardo and David Peterson.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Chicago White Sox vs Toronto Blue Jays — total runs over</span></h3>
-    <p><span class="blurred">2.0% model chance of a high-scoring affair at Rogers Centre.</span></p>
+    <h3><span class="blurred">New York Mets vs Philadelphia Phillies — total runs over</span></h3>
+    <p><span class="blurred">Citizens Bank Park is a run-friendly park — 83.0% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
