🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Robbie Ray racks up Ks today</h3>
-    <p>Robbie Ray faces Red Sox, who strike out 23.8% of the time.</p>
+    <h3>Spencer Schwellenbach is projected to whiff 6.3</h3>
+    <p>Spencer Schwellenbach faces Mets, who strike out 20.0% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Parker Meadows HR prop</h3>
-    <p>Parker Meadows has hit 2 already and owns a 50.0% hard-hit rate vs Zack Littell.</p>
+    <h3>Paul Goldschmidt to hit a HR</h3>
+    <p>100.0% hard-hit rate vs Nick Lodolo — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Yandy Diaz knocks one?</h3>
-    <p>🔥 12 straight games with a hit.</p>
+    <h3>Jackson Merrill knocks one?</h3>
+    <p>High-contact profile vs today's pitcher Mitchell Parker.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: newyorkmets vs philadelphiaphillies</h3>
-    <p>Low 1st-inning scoring profile with Jesus Luzardo and David Peterson.</p>
+    <h3>pittsburghpirates vs milwaukeebrewers NRFI Pick</h3>
+    <p>Chad Patrick and Braxton Ashcraft tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">New York Mets vs Philadelphia Phillies — total runs over</span></h3>
-    <p><span class="blurred">Citizens Bank Park is a run-friendly park — 83.0% chance of fireworks.</span></p>
+    <h3><span class="blurred">Texas Rangers vs Baltimore Orioles run fest?</span></h3>
+    <p><span class="blurred">All signs point to a shootout at Oriole Park at Camden Yards (nan%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
