🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,23 +33,23 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Spencer Schwellenbach is projected to whiff 6.3</h3>
-    <p>Spencer Schwellenbach faces Mets, who strike out 20.0% of the time.</p>
+    <h3>Garrett Crochet over 7.0 Ks</h3>
+    <p>Garrett Crochet faces Angels, who strike out 23.3% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Paul Goldschmidt to hit a HR</h3>
-    <p>100.0% hard-hit rate vs Nick Lodolo — eyes on the fences.</p>
+    <h3>Alec Burleson HR prop</h3>
+    <p>41.7% hard-hit rate vs Jameson Taillon — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Jackson Merrill knocks one?</h3>
-    <p>High-contact profile vs today's pitcher Mitchell Parker.</p>
+    <h3>Yandy Diaz knocks one?</h3>
+    <p>🔥 13 straight games with a hit.</p>
 </div>
 
 <div class="prop-card">
-    <h3>pittsburghpirates vs milwaukeebrewers NRFI Pick</h3>
-    <p>Chad Patrick and Braxton Ashcraft tend to shut it down early — NRFI value here.</p>
+    <h3>newyorkyankees vs cincinnatireds NRFI Pick</h3>
+    <p>Two quick starters: Chase Burns and Carlos Rodon.</p>
 </div>
 
 <div class="prop-card">
