🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Garrett Crochet over 7.0 Ks</h3>
-    <p>Garrett Crochet faces Angels, who strike out 23.3% of the time.</p>
+    <h3>Yusei Kikuchi racks up Ks today</h3>
+    <p>Yusei Kikuchi is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Alec Burleson HR prop</h3>
-    <p>41.7% hard-hit rate vs Jameson Taillon — eyes on the fences.</p>
+    <h3>Ceddanne Rafaela has HR potential</h3>
+    <p>Power bat with 2 HRs and strong contact vs Yusei Kikuchi.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Yandy Diaz knocks one?</h3>
-    <p>🔥 13 straight games with a hit.</p>
+    <h3>Zach Neto Hit Prop</h3>
+    <p>High-contact profile vs today's pitcher Richard Fitts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>newyorkyankees vs cincinnatireds NRFI Pick</h3>
-    <p>Two quick starters: Chase Burns and Carlos Rodon.</p>
+    <h3>pittsburghpirates vs milwaukeebrewers NRFI Pick</h3>
+    <p>Low 1st-inning scoring profile with J. Misiorowski and Paul Skenes.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Texas Rangers vs Baltimore Orioles run fest?</span></h3>
-    <p><span class="blurred">All signs point to a shootout at Oriole Park at Camden Yards (nan%).</span></p>
+    <h3><span class="blurred">Arizona Diamondbacks vs Chicago White Sox run fest?</span></h3>
+    <p><span class="blurred">All signs point to a shootout at Rate Field (nan%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
