🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Yusei Kikuchi racks up Ks today</h3>
-    <p>Yusei Kikuchi is in a prime strikeout spot today.</p>
+    <h3>Kevin Gausman over 5.5 Ks</h3>
+    <p>Great K% matchup vs Guardians — projected for 5.5 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Ceddanne Rafaela has HR potential</h3>
-    <p>Power bat with 2 HRs and strong contact vs Yusei Kikuchi.</p>
+    <h3>Mookie Betts HR prop</h3>
+    <p>Power bat with 1 HRs and strong contact vs Austin Gomber.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Zach Neto Hit Prop</h3>
-    <p>High-contact profile vs today's pitcher Richard Fitts.</p>
+    <h3>Xavier Edwards to record a hit</h3>
+    <p>High-contact profile vs today's pitcher Hayden Birdsong.</p>
 </div>
 
 <div class="prop-card">
-    <h3>pittsburghpirates vs milwaukeebrewers NRFI Pick</h3>
-    <p>Low 1st-inning scoring profile with J. Misiorowski and Paul Skenes.</p>
+    <h3>philadelphiaphillies vs houstonastros NRFI Pick</h3>
+    <p>Two quick starters: Hunter Brown and Cristopher Sanchez.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Arizona Diamondbacks vs Chicago White Sox run fest?</span></h3>
-    <p><span class="blurred">All signs point to a shootout at Rate Field (nan%).</span></p>
+    <h3><span class="blurred">Oakland Athletics vs Detroit Tigers — total runs over</span></h3>
+    <p><span class="blurred">All signs point to a shootout at Comerica Park (nan%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
