🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Kevin Gausman over 5.5 Ks</h3>
-    <p>Great K% matchup vs Guardians — projected for 5.5 strikeouts.</p>
+    <h3>Sonny Gray over 7.0 Ks</h3>
+    <p>Sonny Gray faces Guardians, who strike out 20.9% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Mookie Betts HR prop</h3>
-    <p>Power bat with 1 HRs and strong contact vs Austin Gomber.</p>
+    <h3>Michael Toglia has HR potential</h3>
+    <p>Michael Toglia has hit 2 already and owns a 66.7% hard-hit rate vs Jose Quintana.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Xavier Edwards to record a hit</h3>
-    <p>High-contact profile vs today's pitcher Hayden Birdsong.</p>
+    <h3>Brendan Donovan knocks one?</h3>
+    <p>Batting 1.0 vs Luis L. Ortiz — strong contact spot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>philadelphiaphillies vs houstonastros NRFI Pick</h3>
-    <p>Two quick starters: Hunter Brown and Cristopher Sanchez.</p>
+    <h3>NRFI: minnesotatwins vs detroittigers</h3>
+    <p>Two quick starters: S. Gipson-Long and David Festa.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Oakland Athletics vs Detroit Tigers — total runs over</span></h3>
-    <p><span class="blurred">All signs point to a shootout at Comerica Park (nan%).</span></p>
+    <h3><span class="blurred">New York Mets vs Pittsburgh Pirates — total runs over</span></h3>
+    <p><span class="blurred">PNC Park is a run-friendly park — nan% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
