🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Sonny Gray over 7.0 Ks</h3>
-    <p>Sonny Gray faces Guardians, who strike out 20.9% of the time.</p>
+    <h3>Chris Bassitt is projected to whiff 6.3</h3>
+    <p>Chris Bassitt is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Michael Toglia has HR potential</h3>
-    <p>Michael Toglia has hit 2 already and owns a 66.7% hard-hit rate vs Jose Quintana.</p>
+    <h3>Colton Cowser to hit a HR</h3>
+    <p>40.0% hard-hit rate vs Zack Littell — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Brendan Donovan knocks one?</h3>
-    <p>Batting 1.0 vs Luis L. Ortiz — strong contact spot.</p>
+    <h3>Brandon Lowe Hit Prop</h3>
+    <p>Riding a 14-game hit streak.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: minnesotatwins vs detroittigers</h3>
-    <p>Two quick starters: S. Gipson-Long and David Festa.</p>
+    <h3>NRFI: philadelphiaphillies vs atlantabraves</h3>
+    <p>Low 1st-inning scoring profile with Spencer Schwellenbach and Jesus Luzardo.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">New York Mets vs Pittsburgh Pirates — total runs over</span></h3>
-    <p><span class="blurred">PNC Park is a run-friendly park — nan% chance of fireworks.</span></p>
+    <h3><span class="blurred">Oakland Athletics vs New York Yankees run fest?</span></h3>
+    <p><span class="blurred">Yankee Stadium is a run-friendly park — nan% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
