--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Chris Bassitt is projected to whiff 6.3</h3>
-    <p>Chris Bassitt is in a prime strikeout spot today.</p>
+    <h3>Spencer Strider racks up Ks today</h3>
+    <p>Spencer Strider faces Phillies, who strike out 21.6% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Colton Cowser to hit a HR</h3>
-    <p>40.0% hard-hit rate vs Zack Littell — eyes on the fences.</p>
+    <h3>Cal Raleigh has HR potential</h3>
+    <p>Power bat with 2 HRs and strong contact vs Jack Leiter.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Brandon Lowe Hit Prop</h3>
-    <p>Riding a 14-game hit streak.</p>
+    <h3>Gary Sanchez knocks one?</h3>
+    <p>1.0 AVG vs Taj Bradley makes this a clean look.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: philadelphiaphillies vs atlantabraves</h3>
-    <p>Low 1st-inning scoring profile with Spencer Schwellenbach and Jesus Luzardo.</p>
+    <h3>No Run 1st Inning — philadelphiaphillies vs atlantabraves</h3>
+    <p>Two quick starters: Spencer Strider and Ranger Suarez.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Oakland Athletics vs New York Yankees run fest?</span></h3>
-    <p><span class="blurred">Yankee Stadium is a run-friendly park — nan% chance of fireworks.</span></p>
+    <h3><span class="blurred">St. Louis Cardinals@Cleveland Guardians could explode offensively</span></h3>
+    <p><span class="blurred">Progressive Field is a run-friendly park — nan% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
