🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Spencer Strider racks up Ks today</h3>
-    <p>Spencer Strider faces Phillies, who strike out 21.6% of the time.</p>
+    <h3>Garrett Crochet over 7.3 Ks</h3>
+    <p>Garrett Crochet is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Cal Raleigh has HR potential</h3>
-    <p>Power bat with 2 HRs and strong contact vs Jack Leiter.</p>
+    <h3>George Springer to hit a HR</h3>
+    <p>66.7% hard-hit rate vs Carlos Rodon — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Gary Sanchez knocks one?</h3>
-    <p>1.0 AVG vs Taj Bradley makes this a clean look.</p>
+    <h3>Brandon Lowe Hit Prop</h3>
+    <p>16-game streak — bat is staying hot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — philadelphiaphillies vs atlantabraves</h3>
-    <p>Two quick starters: Spencer Strider and Ranger Suarez.</p>
+    <h3>NRFI: newyorkyankees vs torontobluejays</h3>
+    <p>Max Scherzer and Carlos Rodon tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">St. Louis Cardinals@Cleveland Guardians could explode offensively</span></h3>
-    <p><span class="blurred">Progressive Field is a run-friendly park — nan% chance of fireworks.</span></p>
+    <h3><span class="blurred">San Diego Padres vs Philadelphia Phillies — total runs over</span></h3>
+    <p><span class="blurred">Citizens Bank Park is a run-friendly park — 3.0% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
