🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Garrett Crochet over 7.3 Ks</h3>
-    <p>Garrett Crochet is in a prime strikeout spot today.</p>
+    <h3>Nick Pivetta racks up Ks today</h3>
+    <p>Nick Pivetta faces Phillies, who strike out 21.5% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>George Springer to hit a HR</h3>
-    <p>66.7% hard-hit rate vs Carlos Rodon — eyes on the fences.</p>
+    <h3>Aaron Judge HR prop</h3>
+    <p>Power bat with 3 HRs and strong contact vs Kevin Gausman.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Brandon Lowe Hit Prop</h3>
-    <p>16-game streak — bat is staying hot.</p>
+    <h3>Josh Jung Hit Prop</h3>
+    <p>Batting 1.0 vs Brandon Young — strong contact spot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: newyorkyankees vs torontobluejays</h3>
-    <p>Max Scherzer and Carlos Rodon tend to shut it down early — NRFI value here.</p>
+    <h3>No Run 1st Inning — sandiegopadres vs philadelphiaphillies</h3>
+    <p>Two quick starters: Cristopher Sanchez and Nick Pivetta.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">San Diego Padres vs Philadelphia Phillies — total runs over</span></h3>
-    <p><span class="blurred">Citizens Bank Park is a run-friendly park — 3.0% chance of fireworks.</span></p>
+    <h3><span class="blurred">San Diego Padres vs Philadelphia Phillies run fest?</span></h3>
+    <p><span class="blurred">99.0% model chance of a high-scoring affair at Citizens Bank Park.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
