--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Nick Pivetta racks up Ks today</h3>
-    <p>Nick Pivetta faces Phillies, who strike out 21.5% of the time.</p>
+    <h3>Hunter Brown is projected to whiff 7.6</h3>
+    <p>Hunter Brown faces Rockies, who strike out 26.6% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Aaron Judge HR prop</h3>
-    <p>Power bat with 3 HRs and strong contact vs Kevin Gausman.</p>
+    <h3>Trent Grisham to hit a HR</h3>
+    <p>Power bat with 2 HRs and strong contact vs Jose Berrios.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Josh Jung Hit Prop</h3>
-    <p>Batting 1.0 vs Brandon Young — strong contact spot.</p>
+    <h3>Brice Turang Hit Prop</h3>
+    <p>🔥 13 straight games with a hit.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — sandiegopadres vs philadelphiaphillies</h3>
-    <p>Two quick starters: Cristopher Sanchez and Nick Pivetta.</p>
+    <h3>No Run 1st Inning — newyorkyankees vs torontobluejays</h3>
+    <p>Low 1st-inning scoring profile with Jose Berrios and Will Warren.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">San Diego Padres vs Philadelphia Phillies run fest?</span></h3>
-    <p><span class="blurred">99.0% model chance of a high-scoring affair at Citizens Bank Park.</span></p>
+    <h3><span class="blurred">Kansas City Royals@Seattle Mariners could explode offensively</span></h3>
+    <p><span class="blurred">91.0% model chance of a high-scoring affair at T-Mobile Park.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
