--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Hunter Brown is projected to whiff 7.6</h3>
-    <p>Hunter Brown faces Rockies, who strike out 26.6% of the time.</p>
+    <h3>Brandon Pfaadt racks up Ks today</h3>
+    <p>Brandon Pfaadt faces Giants, who strike out 23.5% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Trent Grisham to hit a HR</h3>
-    <p>Power bat with 2 HRs and strong contact vs Jose Berrios.</p>
+    <h3>Will Smith HR prop</h3>
+    <p>Power bat with 2 HRs and strong contact vs Aaron Civale.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Brice Turang Hit Prop</h3>
-    <p>🔥 13 straight games with a hit.</p>
+    <h3>Brice Turang knocks one?</h3>
+    <p>🔥 14 games and success vs David Peterson — good combo.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — newyorkyankees vs torontobluejays</h3>
-    <p>Low 1st-inning scoring profile with Jose Berrios and Will Warren.</p>
+    <h3>No Run 1st Inning — minnesotatwins vs miamimarlins</h3>
+    <p>Eury Perez and David Festa tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Kansas City Royals@Seattle Mariners could explode offensively</span></h3>
-    <p><span class="blurred">91.0% model chance of a high-scoring affair at T-Mobile Park.</span></p>
+    <h3><span class="blurred">New York Yankees@Toronto Blue Jays could explode offensively</span></h3>
+    <p><span class="blurred">49.0% model chance of a high-scoring affair at Rogers Centre.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
