🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Brandon Pfaadt racks up Ks today</h3>
-    <p>Brandon Pfaadt faces Giants, who strike out 23.5% of the time.</p>
+    <h3>Paul Skenes over 7.2 Ks</h3>
+    <p>Great K% matchup vs Mariners — projected for 7.2 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Will Smith HR prop</h3>
-    <p>Power bat with 2 HRs and strong contact vs Aaron Civale.</p>
+    <h3>Kyle Tucker to hit a HR</h3>
+    <p>Power bat with 1 HRs and strong contact vs Erick Fedde.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Brice Turang knocks one?</h3>
-    <p>🔥 14 games and success vs David Peterson — good combo.</p>
+    <h3>Christian Yelich knocks one?</h3>
+    <p>16-game streak — bat is staying hot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — minnesotatwins vs miamimarlins</h3>
-    <p>Eury Perez and David Festa tend to shut it down early — NRFI value here.</p>
+    <h3>No Run 1st Inning — bostonredsox vs washingtonnationals</h3>
+    <p>S. Ogasawara and Garrett Crochet tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">New York Yankees@Toronto Blue Jays could explode offensively</span></h3>
-    <p><span class="blurred">49.0% model chance of a high-scoring affair at Rogers Centre.</span></p>
+    <h3><span class="blurred">Pittsburgh Pirates vs Seattle Mariners — total runs over</span></h3>
+    <p><span class="blurred">T-Mobile Park is a run-friendly park — 97.0% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
