🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Paul Skenes over 7.2 Ks</h3>
-    <p>Great K% matchup vs Mariners — projected for 7.2 strikeouts.</p>
+    <h3>Cristopher Sanchez is projected to whiff 6.2</h3>
+    <p>Cristopher Sanchez is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Kyle Tucker to hit a HR</h3>
-    <p>Power bat with 1 HRs and strong contact vs Erick Fedde.</p>
+    <h3>Matt Chapman to hit a HR</h3>
+    <p>Power bat with 1 HRs and strong contact vs Cristopher Sanchez.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Christian Yelich knocks one?</h3>
-    <p>16-game streak — bat is staying hot.</p>
+    <h3>Jake Meyers Hit Prop</h3>
+    <p>Batting 1.0 vs Tanner Bibee — strong contact spot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — bostonredsox vs washingtonnationals</h3>
-    <p>S. Ogasawara and Garrett Crochet tend to shut it down early — NRFI value here.</p>
+    <h3>NRFI: torontobluejays vs chicagowhitesox</h3>
+    <p>Low 1st-inning scoring profile with Sean Burke and Jose Berrios.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Pittsburgh Pirates vs Seattle Mariners — total runs over</span></h3>
-    <p><span class="blurred">T-Mobile Park is a run-friendly park — 97.0% chance of fireworks.</span></p>
+    <h3><span class="blurred">Tampa Bay Rays vs Detroit Tigers run fest?</span></h3>
+    <p><span class="blurred">All signs point to a shootout at Comerica Park (nan%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
