🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Cristopher Sanchez is projected to whiff 6.2</h3>
-    <p>Cristopher Sanchez is in a prime strikeout spot today.</p>
+    <h3>Dylan Cease is projected to whiff 6.6</h3>
+    <p>Dylan Cease faces Diamondbacks, who strike out 18.8% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Matt Chapman to hit a HR</h3>
-    <p>Power bat with 1 HRs and strong contact vs Cristopher Sanchez.</p>
+    <h3>Parker Meadows has HR potential</h3>
+    <p>Power bat with 2 HRs and strong contact vs Zack Littell.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Jake Meyers Hit Prop</h3>
-    <p>Batting 1.0 vs Tanner Bibee — strong contact spot.</p>
+    <h3>Jose Altuve Hit Prop</h3>
+    <p>Batting 1.0 vs Slade Cecconi — strong contact spot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: torontobluejays vs chicagowhitesox</h3>
-    <p>Low 1st-inning scoring profile with Sean Burke and Jose Berrios.</p>
+    <h3>philadelphiaphillies vs sanfranciscogiants NRFI Pick</h3>
+    <p>Two quick starters: Justin Verlander and Jesus Luzardo.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Tampa Bay Rays vs Detroit Tigers run fest?</span></h3>
-    <p><span class="blurred">All signs point to a shootout at Comerica Park (nan%).</span></p>
+    <h3><span class="blurred">Tampa Bay Rays vs Detroit Tigers — total runs over</span></h3>
+    <p><span class="blurred">Comerica Park is a run-friendly park — nan% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
