🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Dylan Cease is projected to whiff 6.6</h3>
-    <p>Dylan Cease faces Diamondbacks, who strike out 18.8% of the time.</p>
+    <h3>Spencer Strider over 6.9 Ks</h3>
+    <p>Spencer Strider is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Parker Meadows has HR potential</h3>
-    <p>Power bat with 2 HRs and strong contact vs Zack Littell.</p>
+    <h3>Luke Raley HR prop</h3>
+    <p>Power bat with 1 HRs and strong contact vs Marcus Stroman.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Jose Altuve Hit Prop</h3>
-    <p>Batting 1.0 vs Slade Cecconi — strong contact spot.</p>
+    <h3>Cody Bellinger to record a hit</h3>
+    <p>🔥 14 straight games with a hit.</p>
 </div>
 
 <div class="prop-card">
-    <h3>philadelphiaphillies vs sanfranciscogiants NRFI Pick</h3>
-    <p>Two quick starters: Justin Verlander and Jesus Luzardo.</p>
+    <h3>No Run 1st Inning — arizonadiamondbacks vs sandiegopadres</h3>
+    <p>Randy Vasquez and Eduardo Rodriguez tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Tampa Bay Rays vs Detroit Tigers — total runs over</span></h3>
-    <p><span class="blurred">Comerica Park is a run-friendly park — nan% chance of fireworks.</span></p>
+    <h3><span class="blurred">New York Mets vs Baltimore Orioles run fest?</span></h3>
+    <p><span class="blurred">nan% model chance of a high-scoring affair at Oriole Park at Camden Yards.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
