🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Spencer Strider over 6.9 Ks</h3>
-    <p>Spencer Strider is in a prime strikeout spot today.</p>
+    <h3>Nick Lodolo racks up Ks today</h3>
+    <p>Nick Lodolo is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Luke Raley HR prop</h3>
-    <p>Power bat with 1 HRs and strong contact vs Marcus Stroman.</p>
+    <h3>Nathaniel Lowe has HR potential</h3>
+    <p>100.0% hard-hit rate vs Dylan Cease — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Cody Bellinger to record a hit</h3>
+    <h3>nan to record a hit</h3>
     <p>🔥 14 straight games with a hit.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — arizonadiamondbacks vs sandiegopadres</h3>
-    <p>Randy Vasquez and Eduardo Rodriguez tend to shut it down early — NRFI value here.</p>
+    <h3>NRFI: losangelesangels vs philadelphiaphillies</h3>
+    <p>Low 1st-inning scoring profile with Jesus Luzardo and Jose Soriano.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">New York Mets vs Baltimore Orioles run fest?</span></h3>
-    <p><span class="blurred">nan% model chance of a high-scoring affair at Oriole Park at Camden Yards.</span></p>
+    <h3><span class="blurred">Los Angeles Angels@Philadelphia Phillies could explode offensively</span></h3>
+    <p><span class="blurred">Citizens Bank Park is a run-friendly park — 5.0% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
