--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Nick Lodolo racks up Ks today</h3>
-    <p>Nick Lodolo is in a prime strikeout spot today.</p>
+    <h3>Freddy Peralta racks up Ks today</h3>
+    <p>Great K% matchup vs Dodgers — projected for 7.7 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Nathaniel Lowe has HR potential</h3>
-    <p>100.0% hard-hit rate vs Dylan Cease — eyes on the fences.</p>
+    <h3>Colton Cowser HR prop</h3>
+    <p>Power bat with 2 HRs and strong contact vs Zack Littell.</p>
 </div>
 
 <div class="prop-card">
-    <h3>nan to record a hit</h3>
-    <p>🔥 14 straight games with a hit.</p>
+    <h3>Bobby Witt to record a hit</h3>
+    <p>15-game streak — bat is staying hot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: losangelesangels vs philadelphiaphillies</h3>
-    <p>Low 1st-inning scoring profile with Jesus Luzardo and Jose Soriano.</p>
+    <h3>NRFI: sanfranciscogiants vs torontobluejays</h3>
+    <p>Eric Lauer and Logan Webb tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Los Angeles Angels@Philadelphia Phillies could explode offensively</span></h3>
-    <p><span class="blurred">Citizens Bank Park is a run-friendly park — 5.0% chance of fireworks.</span></p>
+    <h3><span class="blurred">San Francisco Giants vs Toronto Blue Jays — total runs over</span></h3>
+    <p><span class="blurred">98.0% model chance of a high-scoring affair at Rogers Centre.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
