🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Freddy Peralta racks up Ks today</h3>
-    <p>Great K% matchup vs Dodgers — projected for 7.7 strikeouts.</p>
+    <h3>Tarik Skubal over 8.7 Ks</h3>
+    <p>Great K% matchup vs Rangers — projected for 8.7 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Colton Cowser HR prop</h3>
-    <p>Power bat with 2 HRs and strong contact vs Zack Littell.</p>
+    <h3>Spencer Horwitz to hit a HR</h3>
+    <p>100.0% hard-hit rate vs Aaron Civale — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Bobby Witt to record a hit</h3>
-    <p>15-game streak — bat is staying hot.</p>
+    <h3>Pete Crow-Armstrong knocks one?</h3>
+    <p>Batting 1.0 vs Garrett Crochet — strong contact spot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: sanfranciscogiants vs torontobluejays</h3>
-    <p>Eric Lauer and Logan Webb tend to shut it down early — NRFI value here.</p>
+    <h3>NRFI: losangelesangels vs philadelphiaphillies</h3>
+    <p>Two quick starters: Ranger Suarez and Jose Soriano.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">San Francisco Giants vs Toronto Blue Jays — total runs over</span></h3>
-    <p><span class="blurred">98.0% model chance of a high-scoring affair at Rogers Centre.</span></p>
+    <h3><span class="blurred">Los Angeles Angels vs Philadelphia Phillies — total runs over</span></h3>
+    <p><span class="blurred">All signs point to a shootout at Citizens Bank Park (89.0%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
