🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Tarik Skubal over 8.7 Ks</h3>
-    <p>Great K% matchup vs Rangers — projected for 8.7 strikeouts.</p>
+    <h3>Paul Skenes racks up Ks today</h3>
+    <p>Paul Skenes is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Spencer Horwitz to hit a HR</h3>
-    <p>100.0% hard-hit rate vs Aaron Civale — eyes on the fences.</p>
+    <h3>Aaron Judge has HR potential</h3>
+    <p>40.0% hard-hit rate vs Kevin Gausman — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Pete Crow-Armstrong knocks one?</h3>
-    <p>Batting 1.0 vs Garrett Crochet — strong contact spot.</p>
+    <h3>Brandon Nimmo to record a hit</h3>
+    <p>Batting 1.0 vs Tyler Anderson — strong contact spot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: losangelesangels vs philadelphiaphillies</h3>
-    <p>Two quick starters: Ranger Suarez and Jose Soriano.</p>
+    <h3>NRFI: sandiegopadres vs miamimarlins</h3>
+    <p>Eury Perez and Randy Vasquez tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Los Angeles Angels vs Philadelphia Phillies — total runs over</span></h3>
-    <p><span class="blurred">All signs point to a shootout at Citizens Bank Park (89.0%).</span></p>
+    <h3><span class="blurred">New York Yankees vs Toronto Blue Jays — total runs over</span></h3>
+    <p><span class="blurred">Rogers Centre is a run-friendly park — 93.0% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
