🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Paul Skenes racks up Ks today</h3>
-    <p>Paul Skenes is in a prime strikeout spot today.</p>
+    <h3>Logan Gilbert over 6.1 Ks</h3>
+    <p>Great K% matchup vs Brewers — projected for 6.1 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Aaron Judge has HR potential</h3>
-    <p>40.0% hard-hit rate vs Kevin Gausman — eyes on the fences.</p>
+    <h3>Jazz Chisholm Jr. HR prop</h3>
+    <p>50.0% hard-hit rate vs Max Scherzer — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Brandon Nimmo to record a hit</h3>
-    <p>Batting 1.0 vs Tyler Anderson — strong contact spot.</p>
+    <h3>Corey Seager Hit Prop</h3>
+    <p>High-contact profile vs today's pitcher J.T. Ginn.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: sandiegopadres vs miamimarlins</h3>
-    <p>Eury Perez and Randy Vasquez tend to shut it down early — NRFI value here.</p>
+    <h3>milwaukeebrewers vs seattlemariners NRFI Pick</h3>
+    <p>Two quick starters: Logan Gilbert and J. Misiorowski.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">New York Yankees vs Toronto Blue Jays — total runs over</span></h3>
-    <p><span class="blurred">Rogers Centre is a run-friendly park — 93.0% chance of fireworks.</span></p>
+    <h3><span class="blurred">Baltimore Orioles vs Cleveland Guardians — total runs over</span></h3>
+    <p><span class="blurred">Progressive Field is a run-friendly park — nan% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
