🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Logan Gilbert over 6.1 Ks</h3>
-    <p>Great K% matchup vs Brewers — projected for 6.1 strikeouts.</p>
+    <h3>Jesus Luzardo racks up Ks today</h3>
+    <p>Great K% matchup vs Red Sox — projected for 6.7 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Jazz Chisholm Jr. HR prop</h3>
-    <p>50.0% hard-hit rate vs Max Scherzer — eyes on the fences.</p>
+    <h3>Angel Martinez HR prop</h3>
+    <p>66.7% hard-hit rate vs Zach Eflin — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Corey Seager Hit Prop</h3>
-    <p>High-contact profile vs today's pitcher J.T. Ginn.</p>
+    <h3>Mauricio Dubon to record a hit</h3>
+    <p>Batting 1.0 vs Brandon Pfaadt — strong contact spot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>milwaukeebrewers vs seattlemariners NRFI Pick</h3>
-    <p>Two quick starters: Logan Gilbert and J. Misiorowski.</p>
+    <h3>No Run 1st Inning — losangelesangels vs newyorkmets</h3>
+    <p>Sean Manaea and Jake Eder tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Baltimore Orioles vs Cleveland Guardians — total runs over</span></h3>
-    <p><span class="blurred">Progressive Field is a run-friendly park — nan% chance of fireworks.</span></p>
+    <h3><span class="blurred">New York Yankees vs Toronto Blue Jays — total runs over</span></h3>
+    <p><span class="blurred">All signs point to a shootout at Rogers Centre (28.0%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
