--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Jesus Luzardo racks up Ks today</h3>
-    <p>Great K% matchup vs Red Sox — projected for 6.7 strikeouts.</p>
+    <h3>Yusei Kikuchi racks up Ks today</h3>
+    <p>Yusei Kikuchi is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Angel Martinez HR prop</h3>
-    <p>66.7% hard-hit rate vs Zach Eflin — eyes on the fences.</p>
+    <h3>Spencer Torkelson HR prop</h3>
+    <p>Spencer Torkelson has hit 1 already and owns a 100.0% hard-hit rate vs Eric Lauer.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Mauricio Dubon to record a hit</h3>
-    <p>Batting 1.0 vs Brandon Pfaadt — strong contact spot.</p>
+    <h3>Jackson Chourio knocks one?</h3>
+    <p>🔥 15 straight games with a hit.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — losangelesangels vs newyorkmets</h3>
-    <p>Sean Manaea and Jake Eder tend to shut it down early — NRFI value here.</p>
+    <h3>No Run 1st Inning — sandiegopadres vs st.louiscardinals</h3>
+    <p>Sonny Gray and Yu Darvish tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">New York Yankees vs Toronto Blue Jays — total runs over</span></h3>
-    <p><span class="blurred">All signs point to a shootout at Rogers Centre (28.0%).</span></p>
+    <h3><span class="blurred">Baltimore Orioles@Cleveland Guardians could explode offensively</span></h3>
+    <p><span class="blurred">All signs point to a shootout at Progressive Field (nan%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
