🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Yusei Kikuchi racks up Ks today</h3>
-    <p>Yusei Kikuchi is in a prime strikeout spot today.</p>
+    <h3>Dean Kremer is projected to whiff 5.9</h3>
+    <p>Dean Kremer is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Spencer Torkelson HR prop</h3>
-    <p>Spencer Torkelson has hit 1 already and owns a 100.0% hard-hit rate vs Eric Lauer.</p>
+    <h3>Jo Adell HR prop</h3>
+    <p>75.0% hard-hit rate vs Bryan Woo — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Jackson Chourio knocks one?</h3>
+    <h3>Jackson Chourio Hit Prop</h3>
     <p>🔥 15 straight games with a hit.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — sandiegopadres vs st.louiscardinals</h3>
-    <p>Sonny Gray and Yu Darvish tend to shut it down early — NRFI value here.</p>
+    <h3>No Run 1st Inning — seattlemariners vs losangelesangels</h3>
+    <p>Jose Soriano and Bryan Woo tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Baltimore Orioles@Cleveland Guardians could explode offensively</span></h3>
-    <p><span class="blurred">All signs point to a shootout at Progressive Field (nan%).</span></p>
+    <h3><span class="blurred">Miami Marlins vs Milwaukee Brewers — total runs over</span></h3>
+    <p><span class="blurred">All signs point to a shootout at American Family Field (nan%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
