--- a/nrfi.html
+++ b/nrfi.html
@@ -27,87 +27,217 @@ a:hover {text-decoration: underline;}
 </div>
 
 
-<h1 style='text-align:center;font-family:sans-serif;'>NRFI Predictions for 2025-07-24</h1>
+<h1 style='text-align:center;font-family:sans-serif;'>NRFI Predictions for 2025-07-25</h1>
 <style type="text/css">
-#T_a5ff3_row0_col0, #T_a5ff3_row0_col1, #T_a5ff3_row0_col2, #T_a5ff3_row0_col3, #T_a5ff3_row0_col4, #T_a5ff3_row0_col5, #T_a5ff3_row0_col6 {
+#T_9e87c_row0_col0, #T_9e87c_row0_col1, #T_9e87c_row0_col2, #T_9e87c_row0_col3, #T_9e87c_row0_col4, #T_9e87c_row0_col5, #T_9e87c_row0_col6 {
   background-color: rgba(0, 104, 55, 0.6);
 }
-#T_a5ff3_row1_col0, #T_a5ff3_row1_col1, #T_a5ff3_row1_col2, #T_a5ff3_row1_col3, #T_a5ff3_row1_col4, #T_a5ff3_row1_col5, #T_a5ff3_row1_col6 {
-  background-color: rgba(134, 203, 102, 0.6);
+#T_9e87c_row1_col0, #T_9e87c_row1_col1, #T_9e87c_row1_col2, #T_9e87c_row1_col3, #T_9e87c_row1_col4, #T_9e87c_row1_col5, #T_9e87c_row1_col6 {
+  background-color: rgba(18, 137, 72, 0.6);
 }
-#T_a5ff3_row2_col0, #T_a5ff3_row2_col1, #T_a5ff3_row2_col2, #T_a5ff3_row2_col3, #T_a5ff3_row2_col4, #T_a5ff3_row2_col5, #T_a5ff3_row2_col6 {
+#T_9e87c_row2_col0, #T_9e87c_row2_col1, #T_9e87c_row2_col2, #T_9e87c_row2_col3, #T_9e87c_row2_col4, #T_9e87c_row2_col5, #T_9e87c_row2_col6 {
+  background-color: rgba(57, 167, 87, 0.6);
+}
+#T_9e87c_row3_col0, #T_9e87c_row3_col1, #T_9e87c_row3_col2, #T_9e87c_row3_col3, #T_9e87c_row3_col4, #T_9e87c_row3_col5, #T_9e87c_row3_col6 {
+  background-color: rgba(109, 192, 99, 0.6);
+}
+#T_9e87c_row4_col0, #T_9e87c_row4_col1, #T_9e87c_row4_col2, #T_9e87c_row4_col3, #T_9e87c_row4_col4, #T_9e87c_row4_col5, #T_9e87c_row4_col6 {
+  background-color: rgba(157, 213, 105, 0.6);
+}
+#T_9e87c_row5_col0, #T_9e87c_row5_col1, #T_9e87c_row5_col2, #T_9e87c_row5_col3, #T_9e87c_row5_col4, #T_9e87c_row5_col5, #T_9e87c_row5_col6 {
+  background-color: rgba(195, 229, 124, 0.6);
+}
+#T_9e87c_row6_col0, #T_9e87c_row6_col1, #T_9e87c_row6_col2, #T_9e87c_row6_col3, #T_9e87c_row6_col4, #T_9e87c_row6_col5, #T_9e87c_row6_col6 {
+  background-color: rgba(227, 243, 153, 0.6);
+}
+#T_9e87c_row7_col0, #T_9e87c_row7_col1, #T_9e87c_row7_col2, #T_9e87c_row7_col3, #T_9e87c_row7_col4, #T_9e87c_row7_col5, #T_9e87c_row7_col6 {
   background-color: rgba(254, 254, 189, 0.6);
 }
-#T_a5ff3_row3_col0, #T_a5ff3_row3_col1, #T_a5ff3_row3_col2, #T_a5ff3_row3_col3, #T_a5ff3_row3_col4, #T_a5ff3_row3_col5, #T_a5ff3_row3_col6 {
-  background-color: rgba(248, 139, 81, 0.6);
+#T_9e87c_row8_col0, #T_9e87c_row8_col1, #T_9e87c_row8_col2, #T_9e87c_row8_col3, #T_9e87c_row8_col4, #T_9e87c_row8_col5, #T_9e87c_row8_col6 {
+  background-color: rgba(254, 232, 153, 0.6);
 }
-#T_a5ff3_row4_col0, #T_a5ff3_row4_col1, #T_a5ff3_row4_col2, #T_a5ff3_row4_col3, #T_a5ff3_row4_col4, #T_a5ff3_row4_col5, #T_a5ff3_row4_col6 {
+#T_9e87c_row9_col0, #T_9e87c_row9_col1, #T_9e87c_row9_col2, #T_9e87c_row9_col3, #T_9e87c_row9_col4, #T_9e87c_row9_col5, #T_9e87c_row9_col6 {
+  background-color: rgba(253, 202, 120, 0.6);
+}
+#T_9e87c_row10_col0, #T_9e87c_row10_col1, #T_9e87c_row10_col2, #T_9e87c_row10_col3, #T_9e87c_row10_col4, #T_9e87c_row10_col5, #T_9e87c_row10_col6 {
+  background-color: rgba(251, 165, 92, 0.6);
+}
+#T_9e87c_row11_col0, #T_9e87c_row11_col1, #T_9e87c_row11_col2, #T_9e87c_row11_col3, #T_9e87c_row11_col4, #T_9e87c_row11_col5, #T_9e87c_row11_col6 {
+  background-color: rgba(245, 116, 70, 0.6);
+}
+#T_9e87c_row12_col0, #T_9e87c_row12_col1, #T_9e87c_row12_col2, #T_9e87c_row12_col3, #T_9e87c_row12_col4, #T_9e87c_row12_col5, #T_9e87c_row12_col6 {
+  background-color: rgba(226, 73, 50, 0.6);
+}
+#T_9e87c_row13_col0, #T_9e87c_row13_col1, #T_9e87c_row13_col2, #T_9e87c_row13_col3, #T_9e87c_row13_col4, #T_9e87c_row13_col5, #T_9e87c_row13_col6 {
+  background-color: rgba(200, 33, 38, 0.6);
+}
+#T_9e87c_row14_col0, #T_9e87c_row14_col1, #T_9e87c_row14_col2, #T_9e87c_row14_col3, #T_9e87c_row14_col4, #T_9e87c_row14_col5, #T_9e87c_row14_col6 {
   background-color: rgba(165, 0, 38, 0.6);
 }
 </style>
-<table id="T_a5ff3">
+<table id="T_9e87c">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
-      <th id="T_a5ff3_level0_col0" class="col_heading level0 col0" >Game Time</th>
-      <th id="T_a5ff3_level0_col1" class="col_heading level0 col1" >Matchup</th>
-      <th id="T_a5ff3_level0_col2" class="col_heading level0 col2" >Home Pitcher</th>
-      <th id="T_a5ff3_level0_col3" class="col_heading level0 col3" >Away Pitcher</th>
-      <th id="T_a5ff3_level0_col4" class="col_heading level0 col4" >Top Half NRFI (%)</th>
-      <th id="T_a5ff3_level0_col5" class="col_heading level0 col5" >Bottom Half NRFI (%)</th>
-      <th id="T_a5ff3_level0_col6" class="col_heading level0 col6" >Final NRFI Probability (%)</th>
+      <th id="T_9e87c_level0_col0" class="col_heading level0 col0" >Game Time</th>
+      <th id="T_9e87c_level0_col1" class="col_heading level0 col1" >Matchup</th>
+      <th id="T_9e87c_level0_col2" class="col_heading level0 col2" >Home Pitcher</th>
+      <th id="T_9e87c_level0_col3" class="col_heading level0 col3" >Away Pitcher</th>
+      <th id="T_9e87c_level0_col4" class="col_heading level0 col4" >Top Half NRFI (%)</th>
+      <th id="T_9e87c_level0_col5" class="col_heading level0 col5" >Bottom Half NRFI (%)</th>
+      <th id="T_9e87c_level0_col6" class="col_heading level0 col6" >Final NRFI Probability (%)</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th id="T_a5ff3_level0_row0" class="row_heading level0 row0" >0</th>
-      <td id="T_a5ff3_row0_col0" class="data row0 col0" >None</td>
-      <td id="T_a5ff3_row0_col1" class="data row0 col1" >baltimoreorioles vs clevelandguardians</td>
-      <td id="T_a5ff3_row0_col2" class="data row0 col2" >Logan Allen</td>
-      <td id="T_a5ff3_row0_col3" class="data row0 col3" >Charlie Morton</td>
-      <td id="T_a5ff3_row0_col4" class="data row0 col4" >6.400000</td>
-      <td id="T_a5ff3_row0_col5" class="data row0 col5" >2.800000</td>
-      <td id="T_a5ff3_row0_col6" class="data row0 col6" >0.200000</td>
+      <th id="T_9e87c_level0_row0" class="row_heading level0 row0" >4</th>
+      <td id="T_9e87c_row0_col0" class="data row0 col0" >None</td>
+      <td id="T_9e87c_row0_col1" class="data row0 col1" >losangelesdodgers vs bostonredsox</td>
+      <td id="T_9e87c_row0_col2" class="data row0 col2" >Brayan Bello</td>
+      <td id="T_9e87c_row0_col3" class="data row0 col3" >Emmet Sheehan</td>
+      <td id="T_9e87c_row0_col4" class="data row0 col4" >4.400000</td>
+      <td id="T_9e87c_row0_col5" class="data row0 col5" >3.900000</td>
+      <td id="T_9e87c_row0_col6" class="data row0 col6" >0.200000</td>
     </tr>
     <tr>
-      <th id="T_a5ff3_level0_row1" class="row_heading level0 row1" >3</th>
-      <td id="T_a5ff3_row1_col0" class="data row1 col0" >None</td>
-      <td id="T_a5ff3_row1_col1" class="data row1 col1" >oaklandathletics vs houstonastros</td>
-      <td id="T_a5ff3_row1_col2" class="data row1 col2" >Jason Alexander</td>
-      <td id="T_a5ff3_row1_col3" class="data row1 col3" >Luis Severino</td>
-      <td id="T_a5ff3_row1_col4" class="data row1 col4" >6.000000</td>
-      <td id="T_a5ff3_row1_col5" class="data row1 col5" >5.500000</td>
-      <td id="T_a5ff3_row1_col6" class="data row1 col6" >0.300000</td>
+      <th id="T_9e87c_level0_row1" class="row_heading level0 row1" >8</th>
+      <td id="T_9e87c_row1_col0" class="data row1 col0" >None</td>
+      <td id="T_9e87c_row1_col1" class="data row1 col1" >chicagocubs vs chicagowhitesox</td>
+      <td id="T_9e87c_row1_col2" class="data row1 col2" >Adrian Houser</td>
+      <td id="T_9e87c_row1_col3" class="data row1 col3" >Shota Imanaga</td>
+      <td id="T_9e87c_row1_col4" class="data row1 col4" >6.500000</td>
+      <td id="T_9e87c_row1_col5" class="data row1 col5" >3.300000</td>
+      <td id="T_9e87c_row1_col6" class="data row1 col6" >0.200000</td>
     </tr>
     <tr>
-      <th id="T_a5ff3_level0_row2" class="row_heading level0 row2" >4</th>
-      <td id="T_a5ff3_row2_col0" class="data row2 col0" >None</td>
-      <td id="T_a5ff3_row2_col1" class="data row2 col1" >seattlemariners vs losangelesangels</td>
-      <td id="T_a5ff3_row2_col2" class="data row2 col2" >Yusei Kikuchi</td>
-      <td id="T_a5ff3_row2_col3" class="data row2 col3" >Logan Evans</td>
-      <td id="T_a5ff3_row2_col4" class="data row2 col4" >4.500000</td>
-      <td id="T_a5ff3_row2_col5" class="data row2 col5" >6.200000</td>
-      <td id="T_a5ff3_row2_col6" class="data row2 col6" >0.300000</td>
+      <th id="T_9e87c_level0_row2" class="row_heading level0 row2" >2</th>
+      <td id="T_9e87c_row2_col0" class="data row2 col0" >None</td>
+      <td id="T_9e87c_row2_col1" class="data row2 col1" >coloradorockies vs baltimoreorioles</td>
+      <td id="T_9e87c_row2_col2" class="data row2 col2" >Dean Kremer</td>
+      <td id="T_9e87c_row2_col3" class="data row2 col3" >Kyle Freeland</td>
+      <td id="T_9e87c_row2_col4" class="data row2 col4" >5.000000</td>
+      <td id="T_9e87c_row2_col5" class="data row2 col5" >5.100000</td>
+      <td id="T_9e87c_row2_col6" class="data row2 col6" >0.300000</td>
     </tr>
     <tr>
-      <th id="T_a5ff3_level0_row3" class="row_heading level0 row3" >1</th>
-      <td id="T_a5ff3_row3_col0" class="data row3 col0" >None</td>
-      <td id="T_a5ff3_row3_col1" class="data row3 col1" >torontobluejays vs detroittigers</td>
-      <td id="T_a5ff3_row3_col2" class="data row3 col2" >Reese Olson</td>
-      <td id="T_a5ff3_row3_col3" class="data row3 col3" >Eric Lauer</td>
-      <td id="T_a5ff3_row3_col4" class="data row3 col4" >6.900000</td>
-      <td id="T_a5ff3_row3_col5" class="data row3 col5" >5.800000</td>
-      <td id="T_a5ff3_row3_col6" class="data row3 col6" >0.400000</td>
+      <th id="T_9e87c_level0_row3" class="row_heading level0 row3" >0</th>
+      <td id="T_9e87c_row3_col0" class="data row3 col0" >None</td>
+      <td id="T_9e87c_row3_col1" class="data row3 col1" >miamimarlins vs milwaukeebrewers</td>
+      <td id="T_9e87c_row3_col2" class="data row3 col2" >Freddy Peralta</td>
+      <td id="T_9e87c_row3_col3" class="data row3 col3" >Cal Quantrill</td>
+      <td id="T_9e87c_row3_col4" class="data row3 col4" >4.800000</td>
+      <td id="T_9e87c_row3_col5" class="data row3 col5" >6.000000</td>
+      <td id="T_9e87c_row3_col6" class="data row3 col6" >0.300000</td>
     </tr>
     <tr>
-      <th id="T_a5ff3_level0_row4" class="row_heading level0 row4" >2</th>
-      <td id="T_a5ff3_row4_col0" class="data row4 col0" >None</td>
-      <td id="T_a5ff3_row4_col1" class="data row4 col1" >sandiegopadres vs st.louiscardinals</td>
-      <td id="T_a5ff3_row4_col2" class="data row4 col2" >Sonny Gray</td>
-      <td id="T_a5ff3_row4_col3" class="data row4 col3" >Yu Darvish</td>
-      <td id="T_a5ff3_row4_col4" class="data row4 col4" >7.000000</td>
-      <td id="T_a5ff3_row4_col5" class="data row4 col5" >8.100000</td>
-      <td id="T_a5ff3_row4_col6" class="data row4 col6" >0.600000</td>
+      <th id="T_9e87c_level0_row4" class="row_heading level0 row4" >3</th>
+      <td id="T_9e87c_row4_col0" class="data row4 col0" >None</td>
+      <td id="T_9e87c_row4_col1" class="data row4 col1" >philadelphiaphillies vs newyorkyankees</td>
+      <td id="T_9e87c_row4_col2" class="data row4 col2" >Will Warren</td>
+      <td id="T_9e87c_row4_col3" class="data row4 col3" >Taijuan Walker</td>
+      <td id="T_9e87c_row4_col4" class="data row4 col4" >4.000000</td>
+      <td id="T_9e87c_row4_col5" class="data row4 col5" >6.800000</td>
+      <td id="T_9e87c_row4_col6" class="data row4 col6" >0.300000</td>
+    </tr>
+    <tr>
+      <th id="T_9e87c_level0_row5" class="row_heading level0 row5" >5</th>
+      <td id="T_9e87c_row5_col0" class="data row5 col0" >None</td>
+      <td id="T_9e87c_row5_col1" class="data row5 col1" >tampabayrays vs cincinnatireds</td>
+      <td id="T_9e87c_row5_col2" class="data row5 col2" >Nick Martinez</td>
+      <td id="T_9e87c_row5_col3" class="data row5 col3" >Zack Littell</td>
+      <td id="T_9e87c_row5_col4" class="data row5 col4" >6.200000</td>
+      <td id="T_9e87c_row5_col5" class="data row5 col5" >5.100000</td>
+      <td id="T_9e87c_row5_col6" class="data row5 col6" >0.300000</td>
+    </tr>
+    <tr>
+      <th id="T_9e87c_level0_row6" class="row_heading level0 row6" >7</th>
+      <td id="T_9e87c_row6_col0" class="data row6 col0" >None</td>
+      <td id="T_9e87c_row6_col1" class="data row6 col1" >sandiegopadres vs st.louiscardinals</td>
+      <td id="T_9e87c_row6_col2" class="data row6 col2" >Miles Mikolas</td>
+      <td id="T_9e87c_row6_col3" class="data row6 col3" >Nick Pivetta</td>
+      <td id="T_9e87c_row6_col4" class="data row6 col4" >7.100000</td>
+      <td id="T_9e87c_row6_col5" class="data row6 col5" >4.500000</td>
+      <td id="T_9e87c_row6_col6" class="data row6 col6" >0.300000</td>
+    </tr>
+    <tr>
+      <th id="T_9e87c_level0_row7" class="row_heading level0 row7" >1</th>
+      <td id="T_9e87c_row7_col0" class="data row7 col0" >None</td>
+      <td id="T_9e87c_row7_col1" class="data row7 col1" >arizonadiamondbacks vs pittsburghpirates</td>
+      <td id="T_9e87c_row7_col2" class="data row7 col2" >Mike Burrows</td>
+      <td id="T_9e87c_row7_col3" class="data row7 col3" >Ryne Nelson</td>
+      <td id="T_9e87c_row7_col4" class="data row7 col4" >6.200000</td>
+      <td id="T_9e87c_row7_col5" class="data row7 col5" >5.500000</td>
+      <td id="T_9e87c_row7_col6" class="data row7 col6" >0.300000</td>
+    </tr>
+    <tr>
+      <th id="T_9e87c_level0_row8" class="row_heading level0 row8" >11</th>
+      <td id="T_9e87c_row8_col0" class="data row8 col0" >None</td>
+      <td id="T_9e87c_row8_col1" class="data row8 col1" >oaklandathletics vs houstonastros</td>
+      <td id="T_9e87c_row8_col2" class="data row8 col2" >Ryan Gusto</td>
+      <td id="T_9e87c_row8_col3" class="data row8 col3" >Jeffrey Springs</td>
+      <td id="T_9e87c_row8_col4" class="data row8 col4" >5.400000</td>
+      <td id="T_9e87c_row8_col5" class="data row8 col5" >5.900000</td>
+      <td id="T_9e87c_row8_col6" class="data row8 col6" >0.300000</td>
+    </tr>
+    <tr>
+      <th id="T_9e87c_level0_row9" class="row_heading level0 row9" >10</th>
+      <td id="T_9e87c_row9_col0" class="data row9 col0" >None</td>
+      <td id="T_9e87c_row9_col1" class="data row9 col1" >clevelandguardians vs kansascityroyals</td>
+      <td id="T_9e87c_row9_col2" class="data row9 col2" >Michael Wacha</td>
+      <td id="T_9e87c_row9_col3" class="data row9 col3" >Gavin Williams</td>
+      <td id="T_9e87c_row9_col4" class="data row9 col4" >4.800000</td>
+      <td id="T_9e87c_row9_col5" class="data row9 col5" >5.400000</td>
+      <td id="T_9e87c_row9_col6" class="data row9 col6" >0.300000</td>
+    </tr>
+    <tr>
+      <th id="T_9e87c_level0_row10" class="row_heading level0 row10" >14</th>
+      <td id="T_9e87c_row10_col0" class="data row10 col0" >None</td>
+      <td id="T_9e87c_row10_col1" class="data row10 col1" >newyorkmets vs sanfranciscogiants</td>
+      <td id="T_9e87c_row10_col2" class="data row10 col2" >Logan Webb</td>
+      <td id="T_9e87c_row10_col3" class="data row10 col3" >Clay Holmes</td>
+      <td id="T_9e87c_row10_col4" class="data row10 col4" >5.000000</td>
+      <td id="T_9e87c_row10_col5" class="data row10 col5" >6.500000</td>
+      <td id="T_9e87c_row10_col6" class="data row10 col6" >0.300000</td>
+    </tr>
+    <tr>
+      <th id="T_9e87c_level0_row11" class="row_heading level0 row11" >9</th>
+      <td id="T_9e87c_row11_col0" class="data row11 col0" >None</td>
+      <td id="T_9e87c_row11_col1" class="data row11 col1" >atlantabraves vs texasrangers</td>
+      <td id="T_9e87c_row11_col2" class="data row11 col2" >Nathan Eovaldi</td>
+      <td id="T_9e87c_row11_col3" class="data row11 col3" >Joey Wentz</td>
+      <td id="T_9e87c_row11_col4" class="data row11 col4" >7.000000</td>
+      <td id="T_9e87c_row11_col5" class="data row11 col5" >5.700000</td>
+      <td id="T_9e87c_row11_col6" class="data row11 col6" >0.400000</td>
+    </tr>
+    <tr>
+      <th id="T_9e87c_level0_row12" class="row_heading level0 row12" >12</th>
+      <td id="T_9e87c_row12_col0" class="data row12 col0" >None</td>
+      <td id="T_9e87c_row12_col1" class="data row12 col1" >washingtonnationals vs minnesotatwins</td>
+      <td id="T_9e87c_row12_col2" class="data row12 col2" >Zebby Matthews</td>
+      <td id="T_9e87c_row12_col3" class="data row12 col3" >MacKenzie Gore</td>
+      <td id="T_9e87c_row12_col4" class="data row12 col4" >6.600000</td>
+      <td id="T_9e87c_row12_col5" class="data row12 col5" >5.400000</td>
+      <td id="T_9e87c_row12_col6" class="data row12 col6" >0.400000</td>
+    </tr>
+    <tr>
+      <th id="T_9e87c_level0_row13" class="row_heading level0 row13" >6</th>
+      <td id="T_9e87c_row13_col0" class="data row13 col0" >None</td>
+      <td id="T_9e87c_row13_col1" class="data row13 col1" >torontobluejays vs detroittigers</td>
+      <td id="T_9e87c_row13_col2" class="data row13 col2" >Keider Montero</td>
+      <td id="T_9e87c_row13_col3" class="data row13 col3" >Jose Berrios</td>
+      <td id="T_9e87c_row13_col4" class="data row13 col4" >61.600000</td>
+      <td id="T_9e87c_row13_col5" class="data row13 col5" >3.500000</td>
+      <td id="T_9e87c_row13_col6" class="data row13 col6" >2.200000</td>
+    </tr>
+    <tr>
+      <th id="T_9e87c_level0_row14" class="row_heading level0 row14" >13</th>
+      <td id="T_9e87c_row14_col0" class="data row14 col0" >None</td>
+      <td id="T_9e87c_row14_col1" class="data row14 col1" >seattlemariners vs losangelesangels</td>
+      <td id="T_9e87c_row14_col2" class="data row14 col2" >Jose Soriano</td>
+      <td id="T_9e87c_row14_col3" class="data row14 col3" >Bryan Woo</td>
+      <td id="T_9e87c_row14_col4" class="data row14 col4" >6.400000</td>
+      <td id="T_9e87c_row14_col5" class="data row14 col5" >61.000000</td>
+      <td id="T_9e87c_row14_col6" class="data row14 col6" >3.900000</td>
     </tr>
   </tbody>
 </table>
