🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Dean Kremer is projected to whiff 5.9</h3>
-    <p>Dean Kremer is in a prime strikeout spot today.</p>
+    <h3>Nathan Eovaldi is projected to whiff 6.8</h3>
+    <p>Nathan Eovaldi is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Jo Adell HR prop</h3>
-    <p>75.0% hard-hit rate vs Bryan Woo — eyes on the fences.</p>
+    <h3>Adley Rutschman HR prop</h3>
+    <p>41.7% hard-hit rate vs Jose Berrios — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Jackson Chourio Hit Prop</h3>
-    <p>🔥 15 straight games with a hit.</p>
+    <h3>Colt Keith Hit Prop</h3>
+    <p>Batting 1.0 vs Ryne Nelson — strong contact spot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — seattlemariners vs losangelesangels</h3>
-    <p>Jose Soriano and Bryan Woo tend to shut it down early — NRFI value here.</p>
+    <h3>No Run 1st Inning — atlantabraves vs kansascityroyals</h3>
+    <p>Two quick starters: Thomas Hatch and Joey Wentz.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Miami Marlins vs Milwaukee Brewers — total runs over</span></h3>
-    <p><span class="blurred">All signs point to a shootout at American Family Field (nan%).</span></p>
+    <h3><span class="blurred">Toronto Blue Jays vs Baltimore Orioles — total runs over</span></h3>
+    <p><span class="blurred">All signs point to a shootout at Oriole Park at Camden Yards (nan%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
