🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Nathan Eovaldi is projected to whiff 6.8</h3>
-    <p>Nathan Eovaldi is in a prime strikeout spot today.</p>
+    <h3>Ryan Pepiot is projected to whiff 6.4</h3>
+    <p>Ryan Pepiot is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Adley Rutschman HR prop</h3>
-    <p>41.7% hard-hit rate vs Jose Berrios — eyes on the fences.</p>
+    <h3>Dominic Canzone has HR potential</h3>
+    <p>Dominic Canzone has hit 1 already and owns a 100.0% hard-hit rate vs Kumar Rocker.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Colt Keith Hit Prop</h3>
-    <p>Batting 1.0 vs Ryne Nelson — strong contact spot.</p>
+    <h3>Luis Arraez knocks one?</h3>
+    <p>13-game streak — bat is staying hot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — atlantabraves vs kansascityroyals</h3>
-    <p>Two quick starters: Thomas Hatch and Joey Wentz.</p>
+    <h3>NRFI: atlantabraves vs cincinnatireds</h3>
+    <p>Andrew Abbott and Carlos Carrasco tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Toronto Blue Jays vs Baltimore Orioles — total runs over</span></h3>
-    <p><span class="blurred">All signs point to a shootout at Oriole Park at Camden Yards (nan%).</span></p>
+    <h3><span class="blurred">Tampa Bay Rays@New York Yankees could explode offensively</span></h3>
+    <p><span class="blurred">nan% model chance of a high-scoring affair at Yankee Stadium.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
