🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Ryan Pepiot is projected to whiff 6.4</h3>
-    <p>Ryan Pepiot is in a prime strikeout spot today.</p>
+    <h3>Robbie Ray is projected to whiff 7.2</h3>
+    <p>Robbie Ray is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Dominic Canzone has HR potential</h3>
-    <p>Dominic Canzone has hit 1 already and owns a 100.0% hard-hit rate vs Kumar Rocker.</p>
+    <h3>Julio Rodriguez to hit a HR</h3>
+    <p>54.5% hard-hit rate vs Jack Leiter — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Luis Arraez knocks one?</h3>
+    <h3>Luis Arraez to record a hit</h3>
     <p>13-game streak — bat is staying hot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: atlantabraves vs cincinnatireds</h3>
-    <p>Andrew Abbott and Carlos Carrasco tend to shut it down early — NRFI value here.</p>
+    <h3>No Run 1st Inning — detroittigers vs philadelphiaphillies</h3>
+    <p>Two quick starters: Ranger Suarez and Jack Flaherty.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Tampa Bay Rays@New York Yankees could explode offensively</span></h3>
-    <p><span class="blurred">nan% model chance of a high-scoring affair at Yankee Stadium.</span></p>
+    <h3><span class="blurred">Detroit Tigers vs Philadelphia Phillies run fest?</span></h3>
+    <p><span class="blurred">All signs point to a shootout at Citizens Bank Park (100.0%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
