🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Robbie Ray is projected to whiff 7.2</h3>
-    <p>Robbie Ray is in a prime strikeout spot today.</p>
+    <h3>Sonny Gray is projected to whiff 7.1</h3>
+    <p>Sonny Gray faces Dodgers, who strike out 20.7% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Julio Rodriguez to hit a HR</h3>
-    <p>54.5% hard-hit rate vs Jack Leiter — eyes on the fences.</p>
+    <h3>Ben Rice has HR potential</h3>
+    <p>Ben Rice has hit 1 already and owns a 100.0% hard-hit rate vs Patrick Corbin.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Luis Arraez to record a hit</h3>
-    <p>13-game streak — bat is staying hot.</p>
+    <h3>Luis Arraez Hit Prop</h3>
+    <p>Streaking with 0.476 AVG against Brandon Pfaadt.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — detroittigers vs philadelphiaphillies</h3>
-    <p>Two quick starters: Ranger Suarez and Jack Flaherty.</p>
+    <h3>baltimoreorioles vs philadelphiaphillies NRFI Pick</h3>
+    <p>Low 1st-inning scoring profile with Jesus Luzardo and Cade Povich.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Detroit Tigers vs Philadelphia Phillies run fest?</span></h3>
-    <p><span class="blurred">All signs point to a shootout at Citizens Bank Park (100.0%).</span></p>
+    <h3><span class="blurred">San Francisco Giants@Pittsburgh Pirates could explode offensively</span></h3>
+    <p><span class="blurred">PNC Park is a run-friendly park — nan% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
